--- a/treasure-hunt/src/main/resources/application.properties
+++ b/treasure-hunt/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-logging.file.path=./logs/treasure-hunt.log
-logging.file.name=treasure-hunt.log
+logging.file.path=./logs/
+logging.file.name=./logs/treasure-hunt.log
